fix(deepsearch/sources-sidebar): Improve visibility of non-active tabs and fix color inconsistencies (#138)
- Enhance the visibility of non-active tabs in the sources left sidebar by adjusting contrast and styling
- Resolve miscellaneous text and background color inconsistencies across the feature
- Ensure a clear and visually consistent appearance for all tabs and elements in the sidebar

Changes summary:
Improved the visibility of non-active tabs in the sources sidebar and fixed text/background color inconsistencies, ensuring a more cohesive and user-friendly design.

--- a/src/sass/abstract/_vars.scss
+++ b/src/sass/abstract/_vars.scss
@@ -44,7 +44,7 @@
 			hsla(var(--accent-hsl) / 0.05) 60%,
 			hsla(var(--accent-hsl) / 0.45) 100%);
 
-	--c-bg-textarea: linear-gradient(145deg, hsla(var(--accent-hsl) / 0.3) 0%, hsla(var(--accent-hsl) / 0.1) 25%, hsla(var(--accent-hsl) / 0.1) 65%, hsla(var(--accent-hsl) / 0.3) 100%);
+	--c-bg-textarea: linear-gradient(145deg, hsla(var(--accent-hsl) / 0.2) 0%, hsla(var(--accent-hsl) / 0.1) 22%, hsla(var(--accent-hsl) / 0.1) 68%, hsla(var(--accent-hsl) / 0.2) 100%);
 
 
 	/* ? --- OPENAAI CSS VARS --- */
@@ -252,7 +252,6 @@ html.light {
 	--c-bg-msg-gpt: hsl(var(--surface-h), calc(var(--surface-s) * 1), calc(var(--surface-l) * 0.97));
 
 	/* ? ========== Type message textarea colors ========== */
-	--c-border-textarea: var(--c-bg-textarea);
 	--c-placeholder-textarea: hsla(var(--txt-hsl) / 0.6);
 
 	/* ? ========== modal, dialog, contextmenu bg ========== */
@@ -388,7 +387,6 @@ html.dark {
 	--c-bg-msg-gpt: hsla(var(--accent-hsl) / 0.08);
 
 	/* ? ========== Type message textarea colors ========== */
-	--c-border-textarea: var(--c-surface-2);
 	--c-placeholder-textarea: hsl(var(--accent-hsl) / 0.8);
 
 	/* ? ========== modal, dialog, contextmenu bg ========== */
