--- a/src/sass/elements/_search.scss
+++ b/src/sass/elements/_search.scss
@@ -2,6 +2,20 @@
 // [data-testid="screen-threadFlyOut"]:has([data-testid="bar-search-sources-header"]) {
 [data-testid="screen-threadFlyOut"] {
 
+    /* Header where main title and tabs are */
+    [data-testid="bar-search-sources-header"] {
+        .border-token-main-surface-tertiary.bg-token-main-surface-tertiary.rounded-full {
+            // background-color: hsla(var(--accent-hsl) / 0.2) !important;
+            border-radius: var(--br-btn) !important;
+            box-shadow: 0 0 0 1px hsla(var(--accent-hsl) / 0.2) !important;
+
+            /* "Activity" and "X Sources" tab in inactive state */
+            button.btn[class*="min-w-[100px]"]:not(.bg-token-main-surface-primary) {
+                color: var(--c-accent) !important;
+            }
+        }
+    }
+
     /* Add hover state for searched items */
     a[class*="hover:bg-token-main-surface-secondary"] {
         &:hover {
